--- a/index.html
+++ b/index.html
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Weather Dashboard</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather Dashboard</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-	<header>
-		<h1>Weather Dashboard</h1>
-	</header>
-	<main>
-		<section>
-			<form>
-				<label for="city">Enter a city name:</label>
-				<input type="text" id="city" name="city">
-				<button type="submit">Search</button>
-			</form>
-		</section>
-		<section id="current-weather">
-			<h2>Current Weather</h2>
-			<div id="current-city"></div>
-			<div id="current-date"></div>
-			<div id="current-icon"></div>
-			<div id="current-temp"></div>
-			<div id="current-humidity"></div>
-			<div id="current-wind"></div>
-		</section>
-		<section id="forecast">
-			<h2>5-Day Forecast</h2>
-			<div id="forecast-container"></div>
-		</section>
-		<aside>
-			<h2>Search History</h2>
-			<ul id="search-history"></ul>
-		</aside>
-	</main>
-	<script src="script.js"></script>
+    <div class="container">
+        <h1>Weather Dashboard</h1>
+        <aside>
+          <form id="cityForm">
+            <h2>Search for a City:</h2>
+            <input type="text" id="cityInput" placeholder="Enter a city">
+            <button type="submit">Search</button>
+          </form>
+          <hr>
+          <div id="searchHistory"></div>
+        </aside>
+        <section id="weatherSection">
+          <div id="currentWeather"></div>
+          <div id="forecast"></div>
+        </section>
+      </div>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
