added styles to the css, added a clear search history button, adjusted date format on the forecast

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <input type="text" id="cityInput" placeholder="Enter a city">
             <button type="submit">Search</button>
           </form>
+          <button id="clearHistoryBtn">Clear Search History</button>
           <hr>
           <div id="searchHistory"></div>
         </aside>
@@ -22,7 +23,9 @@
           <div id="currentWeather"></div>
           <div id="forecast"></div>
         </section>
-      </div>
-  <script src="./assets/js/script.js"></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/dayjs.min.js"></script>
+    <script src="path/to/dayjs/dayjs.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
